--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
+
 :root {
-    --bg-light: #f8ecec;
+    --bg-light: #fbf2f2;
     --bg-dark: #222831;
     --text-light: #000000;
     --text-dark: #ffffff;
